--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
-    <title>Mopsy</title>
+    <title>Tekapo</title>
     <link rel="shortcut icon" href="./images/favicon.ico">
     <link href="style/main.css" type="text/css" rel="stylesheet" media="screen,projection"/>
     <link rel="apple-touch-icon" href="./apple-touch-icon.png" />
