--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta property="og:url"              content="tekapoyoon.github.io" />
-    <meta property="og:title"              content="Tekapo portfolio" />
-    <meta property="og:description"              content="Design thinking" />
+    <meta property="og:title"              content="TekapoYoon" />
+    <meta property="og:description"              content="Portfolio" />
     <meta property="og:image"              content="https://tekapoyoon.github.io/images/web-cover.jpg" />
     <meta property="og:image:type"              content="image/png" />
     <meta property="og:image:width"              content="400px" />
