--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-129134504-1"></script>
+  <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-129134504-1');
+  </script>
     <meta property="og:url"              content="tekapoyoon.github.io" />
     <meta property="og:title"              content="TekapoYoon" />
     <meta property="og:description"              content="Portfolio" />
@@ -15,16 +25,7 @@
     <link rel="shortcut icon" href="./images/favicon.ico">
     <link href="style/main.css?ver=2" type="text/css" rel="stylesheet" media="screen,projection"/>
     <link rel="apple-touch-icon" href="./apple-touch-icon.png" />
-    <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-        ga('create', 'UA-77023028-1', 'auto');
-        ga('send', 'pageview');
-
-      </script>
 </head>
 <body>
     <div id="app">
