--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <title>Tekapo</title>
     <link rel="shortcut icon" href="./images/favicon.ico">
-    <link href="style/main.css?ver=2" type="text/css" rel="stylesheet" media="screen,projection"/>
+    <link href="style/main.css?ver=3" type="text/css" rel="stylesheet" media="screen,projection"/>
     <link rel="apple-touch-icon" href="./apple-touch-icon.png" />
 
 </head>
@@ -39,6 +39,6 @@
     </div>
     </div>
     <script src="./script/jquery-1.12.4.js"></script>
-    <script src="./script/main.js"></script>
+    <script src="./script/main.js?ver=1"></script>
 </body>
 </html>
